--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,12 +35,21 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.6
-  flutter_native_splash: ^2.3.13
+  # flutter_native_splash: ^2.3.13
   animate_do: ^3.3.4
   dots_indicator: ^3.0.0
   flutter_svg: ^2.0.10+1
-  google_fonts: ^6.2.1
+  # google_fonts: ^6.2.1
   get: ^4.6.6
+  firebase_core: ^2.24.2
+  firebase_auth: ^4.16.0
+  cloud_firestore: ^4.14.0
+  google_sign_in: ^6.2.1
+  icons_plus: ^5.0.0
+  persistent_bottom_nav_bar: ^5.0.2
+  dot_navigation_bar: ^1.0.2
+  stylish_bottom_bar: ^1.0.3
+  bubble_bottom_bar: ^2.0.0
 
 dev_dependencies:
   flutter_test:
@@ -78,10 +87,10 @@ flutter:
   # "family" key with the font family name, and a "fonts" key with a
   # list giving the asset and other descriptors for the font. For
   # example:
-  # fonts:
-  #   - family: Schyler
-  #     fonts:
-  #       - asset: fonts/Schyler-Regular.ttf
+  fonts:
+    - family: Plus Jakarta Sans
+      fonts:
+        - asset: assets\fonts\Plus_Jakarta_Sans\PlusJakartaSans-Regular.ttf
   #       - asset: fonts/Schyler-Italic.ttf
   #         style: italic
   #   - family: Trajan Pro
