--- a/splash.yaml
+++ b/splash.yaml
@@ -1,13 +1,13 @@
-flutter_native_splash:
-  color: "#FFFFFF"
-  color_dark: "#FFFFFF"
-  image: assets/images/splash.png
-  image_dark: assets/images/splash.png
+# flutter_native_splash:
+#   color: "#FFFFFF"
+#   color_dark: "#FFFFFF"
+#   image: assets/images/splash.png
+#   image_dark: assets/images/splash.png
 
-  android_12:
-    color: "#FFFFFF"
-    color_dark: "#FFFFFF"
-    image: assets/images/splash.png
-    image_dark: assets/images/splash.png
+#   android_12:
+#     color: "#FFFFFF"
+#     color_dark: "#FFFFFF"
+#     image: assets/images/splash.png
+#     image_dark: assets/images/splash.png
 
-  web: false
+#   web: false
