--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,11 +35,9 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.6
-  # flutter_native_splash: ^2.3.13
   animate_do: ^3.3.4
   dots_indicator: ^3.0.0
   flutter_svg: ^2.0.10+1
-  # google_fonts: ^6.2.1
   get: ^4.6.6
   firebase_core: ^2.24.2
   firebase_auth: ^4.16.0
@@ -50,6 +48,10 @@ dependencies:
   dot_navigation_bar: ^1.0.2
   stylish_bottom_bar: ^1.0.3
   bubble_bottom_bar: ^2.0.0
+  lottie: ^3.1.0
+  tmdb_api: ^2.2.0
+  carousel_slider: ^4.2.1
+  http: ^1.2.1
 
 dev_dependencies:
   flutter_test:
