--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -53,6 +53,7 @@ dependencies:
   carousel_slider: ^4.2.1
   http: ^1.2.1
   cached_network_image: ^3.3.1
+  fluttertoast: ^8.2.4
 
 dev_dependencies:
   flutter_test:
