--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -54,6 +54,7 @@ dependencies:
   http: ^1.2.1
   cached_network_image: ^3.3.1
   fluttertoast: ^8.2.4
+  youtube_player_flutter: ^9.0.0
 
 dev_dependencies:
   flutter_test:
