--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,23 +43,21 @@ dependencies:
   firebase_auth: ^4.16.0
   cloud_firestore: ^4.14.0
   google_sign_in: ^6.2.1
-  icons_plus: ^5.0.0
-  persistent_bottom_nav_bar: ^5.0.2
-  dot_navigation_bar: ^1.0.2
-  stylish_bottom_bar: ^1.0.3
-  bubble_bottom_bar: ^2.0.0
   lottie: ^3.1.0
   tmdb_api: ^2.2.0
   carousel_slider: ^4.2.1
   http: ^1.2.1
-  cached_network_image: ^3.3.1
-  fluttertoast: ^8.2.4
   youtube_player_flutter: ^9.0.0
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  flutter_launcher_icons: ^0.13.1
 
+flutter_icons:
+  android: true
+  ios: true
+  image_path: "assets/images/splash.png"  
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
   # activated in the `analysis_options.yaml` file located at the root of your
